--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 
 
-
+/* 
 body{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 20px;
@@ -32,7 +32,7 @@ button {
     font-size: 15px;
     font-style: bold;
     margin: 30px 10px;
-} 
+}  */
 
 
 
